--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -1,8 +1,28 @@
 {
-    "benefitComprehensive" : "Benefit from comprehensive car insurance for your private or professional car with the best covers and at an ultra-competitive",
-    "bannerImageText" : "The RGF Group: The best service and optimal protection",
-    "homeHeaderText" :"Compose your insurance online",
-    "headerInsurance" : "Click on your insurance to simulate your premium",
-    "headerProfileText" : "Insurance Broker",
-    "headerCompanyText" : "Supported by"
+  "benefitComprehensive": "Benefit from comprehensive car insurance for your private or professional car with the best covers and at an ultra-competitive",
+  "bannerImageText": "The RGF Group: The best service and optimal protection",
+  "homeHeaderText": "Compose your insurance online",
+  "headerInsurance": "Click on your insurance to simulate your premium",
+  "headerProfileText": "Insurance Broker",
+  "headerCompanyText": "Supported by",
+
+  "habitationCardContent": "Benefit from comprehensive car insurance for your private or professional car, with the best covers and at an ultra-competitive price!",
+  "habitationHeading": "Compose your ideal home insurance policy",
+  "habitationSimulationContent": "I make an online simulation",
+  "habitationRendezvousContent": "Make an appointment with a consultant",
+  "habitationContactContent": "I would like to receive more information",
+  "habitationSimulationBtn": "Simulation",
+  "habitationRendezvousBtn": "Rendezvous",
+  "habitationContactBtn": "Contact",
+  "simulationHeaderText": "Online simulation",
+  "simulationContentLabel": "Enter your chassis number",
+  "simulationNextBtn": "Next",
+  "simulationWithoutChassisBtn": "Without chassis number",
+  "modalTitle": "The chassis number",
+  "modalContentP1": "7 The chassis number This number is usually found in several places :",
+  "modalContentP2": "On the driver's side dashboard you can see it through the windshield from outside the car.",
+  "modalContentP3": "On the driver's side door, check the sticker that contains information about the car, including the chassis number.",
+  "modalContentP4": "In the engine compartment ​this number can be on the engine block or other engine parts.",
+  "modalContentP5": "On the registration documents of the car usually on the vehicle registration certificate.",
+  "modalContentP6": "On your insurance documents usually on your card or insurance policy."
 }
